--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -44,3 +44,8 @@ accion.guardar=Save
 accion.regresar=Return
 
 
+login.username=User
+login.password=Password
+login.login=Login
+e403.titulo=Access Denied
+e403.texto=You do not have permissions to view this page or perform this action.
