Finalizacion clase semana 11

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -49,3 +49,16 @@ login.password=Password
 login.login=Login
 e403.titulo=Access Denied
 e403.texto=You do not have permissions to view this page or perform this action.
+
+
+plantilla.tusuario=User
+plantilla.troles=Rol
+plantilla.usuarios=Users
+plantilla.bienvenido=User
+plantilla.titulo=Your online shop
+plantilla.logout=Logout
+cliente.limiteTotal=L\u00edmite Total
+cliente.totalClientes=Total de clientes
+articulo.inventario=Inventario Total
+articulo.totalArticulos=Total de Art\u00edculos
+categoria.totalCategorias=Total de Categorias
