--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,3 +49,15 @@ login.password=Contrase\u00f1a
 login.login=Autenticar
 e403.titulo=Acceso Denegado
 e403.texto=No tiene permisos para ver esta p\u00e1gina o ejectuar esta acci\u00f3n
+
+plantilla.tusuario=Usuario
+plantilla.troles=Roles
+plantilla.usuarios=Usuarios
+plantilla.bienvenido=Usuario
+plantilla.titulo=Su tienda en l\u00ednea
+plantilla.logout=Logout
+cliente.limiteTotal=L\u00edmite Total
+cliente.totalClientes=Total de clientes
+articulo.inventario=Inventario Total
+articulo.totalArticulos=Total de Art\u00edculos
+categoria.totalCategorias=Total de Categorias
